<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

    <TextView
        android:id="@+id/welcome_text_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eng_welcome_tv"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/version_text_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/eng_version_tv"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

        <Button
            android:id="@+id/plan_trip_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_btn"
            android:text="@string/eng_btn_plan_trip"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/create_memory_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_btn"
            android:text="@string/eng_create_memory_btn"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/budget_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_btn"
            android:text="@string/eng_budget_btn"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/view_gallery_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_btn"
            android:text="@string/eng_view_gallery_btn"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>