<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:padding="16dp"
    tools:context=".ui.login.RegisterActivity">

    <TextView
        android:id="@+id/register_account_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/eng_register_account_tv"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_et"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/eng_email_et"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/edittext_text_selector"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_account_tv"
        app:layout_constraintBottom_toTopOf="@id/name_et" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/eng_name_et"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/edittext_text_selector"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_et"
        app:layout_constraintBottom_toTopOf="@id/surname_et" />

    <EditText
        android:id="@+id/surname_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/eng_surname_et"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/edittext_text_selector"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_et"
        app:layout_constraintBottom_toTopOf="@id/age_et" />

    <EditText
        android:id="@+id/age_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/eng_age_et"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="@color/edittext_text_selector"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname_et"
        app:layout_constraintBottom_toTopOf="@id/password_et" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/eng_password_et"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/edittext_text_selector"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_et"
        app:layout_constraintBottom_toTopOf="@id/confirm_password_et" />

    <EditText
        android:id="@+id/confirm_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/eng_confirm_password_et"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/edittext_text_selector"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        app:layout_constraintBottom_toTopOf="@id/button_group" />

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_et"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/back_to_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/custom_btn"
            android:padding="6dp"
            android:text="@string/eng_back_to_login_page_btn"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/register_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:padding="6dp"
            android:text="@string/eng_register_account_btn"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>