<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:padding="16dp"
    tools:context=".ui.plan_trip.PlanTripFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/plan_trip_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/eng_plan_trip_tv"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/destination_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/eng_enter_destination_et"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="18dp"
                android:inputType="textMultiLine"
                android:background="@drawable/rounded_corner"/>

            <TextView
                android:id="@+id/start_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/eng_start_date_tv"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/start_date_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="18dp"
                android:background="@drawable/custom_btn"
                android:text="@string/default_date"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/end_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/eng_end_date_tv"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/end_date_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="18dp"
                android:background="@drawable/custom_btn"
                android:text="@string/default_date"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/notes_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/eng_enter_notes_et"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="18dp"
                android:inputType="textMultiLine"
                android:background="@drawable/rounded_corner"/>

            <EditText
                android:id="@+id/custom_expenses_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="Custom Expenses"
                android:inputType="numberDecimal"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"/>

            <TextView
                android:id="@+id/select_activities_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Custom Expenses"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/selected_activities_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="18dp"
                android:textAlignment="center"
                android:gravity="center" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selected_activities_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                android:padding="16dp" />

            <EditText
                android:id="@+id/meals_fees_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/eng_enter_meals_fees_et"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="18dp"
                android:inputType="numberDecimal"
                android:background="@drawable/rounded_corner" />

            <Button
                android:id="@+id/save_trip_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="18dp"
                android:background="@drawable/custom_btn"
                android:text="@string/eng_save_trip_et"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/budget_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" >

                <TextView
                    android:id="@+id/sub_total_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_sub_total_r_tv"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/discount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/eng_discount_r_tv"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/final_budget_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/eng_final_budget_r_rv_tv"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/confirm_trip_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:padding="18dp"
                    android:background="@drawable/custom_btn"
                    android:text="@string/eng_confirm_trip_button"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>